Fix z-index style mobile

--- a/src/components/Portfolio/Portfolio.styles.scss
+++ b/src/components/Portfolio/Portfolio.styles.scss
@@ -11,11 +11,12 @@
     color: #ffb700;
     font-size: 36px;
     padding-top: 20px;
-    z-index: 100;
+    
 
     @include mobile {
       padding-top: calc(100vh - 100px);
       font-size: 24px;
+      z-index: 0;
     }
 
     h1 {
